--- a/salesmvc/appsettings.json
+++ b/salesmvc/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "salesmvcContext": "Server=(localdb)\\mssqllocaldb;Database=salesmvcContext-b59c38c7-7512-4b74-bbad-4c1ce87fa42d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
