--- a/salesmvc/appsettings.json
+++ b/salesmvc/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "salesmvcContext": "Server=(localdb)\\mssqllocaldb;Database=salesmvcContext-b59c38c7-7512-4b74-bbad-4c1ce87fa42d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "salesmvcContext": "server=localhost;userid=developer;password=12345678;database=saleswebmvccappdb"
   }
 }
